Extraneous whitespace when selecting and copying issue number on Chrome/Windows (#37390).
Patch by Thomas Löber (@tloeber).


git-svn-id: https://svn.redmine.org/redmine/trunk@22663 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -150,6 +150,7 @@ div.modal .box p {margin: 0.3em 0;}
 
 .mobile-show {display: none;}
 .hidden {display: none;}
+.inline-block {display: inline-block;}
 .inline-flex {display: inline-flex;}
 
 /***** Links *****/
@@ -1573,6 +1574,7 @@ td.gantt_selected_column .gantt_hdr,.gantt_selected_column_container {
   border-radius: 2px;
   text-transform: uppercase;
   text-decoration: none;
+  user-select: none;
 }
 .badge-private {
   background: #d22;
